# roost-os

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: properties.example.yaml
scripts/: generate_report.py  import_pricelabs.py  scrape_comps.py
src/roost/: config.py  models.py
src/roost/analysis/: gap_nights.py  portfolio.py  pricing.py  seasonal.py
src/roost/pricelabs/: importer.py  schemas.py
src/roost/reports/: __init__.py  formatters.py  generator.py  templates.py
src/roost/scraper/: airbnb_search.py
